bug: fix newsletter input box on mobile

--- a/src/listen/styles.scss
+++ b/src/listen/styles.scss
@@ -25,7 +25,7 @@
     font-size: 20px;
 
     @media (max-width: $mobile-breakpoint) {
-      font-size: 18px;
+      font-size: 16px;
     }
 
     input {
@@ -49,6 +49,10 @@
       font-size: 1.2em;
       font-weight: bold;
       padding: 0;
+
+      @media (max-width: $mobile-breakpoint) {
+        width: 5.5em;
+      }
     }
   }
 
